# rusted-nes

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate_color_array_from_pal.py
src/: PPU.rs  logging.rs  main.rs  memory.rs  pixel_proccessing.rs  pixel_processor.rs  processor.rs  types.rs
src/memory/: combinatorics.rs  hooks.rs  ines.rs  mappers.rs  ppu_memory.rs
src/memory/mappers/: mapper0.rs
src/pixel_processor/: helper.rs  memory_events_processor.rs  rendering.rs  tile.rs
src/processor/: execution.rs  instruction.rs  settings.rs
src/processor/execution/: arithmetic.rs  branches.rs  decrement.rs  increment.rs  jumps.rs  load.rs  logic.rs  shifts.rs  stack.rs  store.rs  transfers.rs
src/processor/execution/arithmetic/: adc.rs  cmp.rs  cpx.rs  cpy.rs  mod.rs  sbc.rs  sdc.rs
src/processor/execution/decrement/: dec.rs  dex.rs  dey.rs
src/processor/execution/increment/: inc.rs  inx.rs  iny.rs  mod.rs
src/processor/execution/jumps/: jmp.rs  jsr.rs  rts.rs
src/processor/execution/load/: lda.rs  ldx.rs  ldy.rs  mod.rs
src/processor/execution/logic/: and.rs  bit.rs  eor.rs  ora.rs
src/processor/execution/shifts/: asl.rs  lsr.rs  mod.rs  rol.rs  ror.rs
src/processor/execution/store/: mod.rs  sta.rs  stx.rs  sty.rs
