[package]
name = "rusted-nes"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
nom = "7.1.3"
derive-new = "0.6"
minifb = "0.27.0"

[dev-dependencies]
proptest = "1.0.0"
